--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
+  "engines": {
+    "npm": "8.3.1",
+    "node": "16.14.0"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.2.0",
